--- a/biblio.ipynb
+++ b/biblio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "b113e013",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "e8f90b7f",
    "metadata": {},
    "outputs": [],
@@ -28,33 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "f02704e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current bibliography has 3038 entries.\n",
-      "Resolve conflict in entry aghanim2020planck.\n",
-      "Merging added 94 entries from the new bibliography.\n",
-      "Current bibliography has 3132 entries.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bib_data1.merge(topo_data)\n"
+    "# bib_data1.merge(topo_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "621ea373",
+   "execution_count": 37,
+   "id": "c5e53e31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bib_data1.parsed_contents.to_file(\"some.bib\")\n"
+    "add_data1.to_file(\"merged.bib\")\n"
    ]
   },
   {
@@ -115,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "1c8c85ba",
    "metadata": {},
    "outputs": [
@@ -123,21 +112,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARTICLE\n"
+      "Oliveira, Renan A.\n",
+      "Pereira, Thiago S.\n",
+      "Quartin, Miguel\n"
      ]
     }
    ],
    "source": [
-    "for key in bib_data1.parsed_contents.entries:\n",
-    "    entry = bib_data1.parsed_contents.entries[key]\n",
+    "for key in add_data1.parsed_contents.entries:\n",
+    "    entry = add_data1.parsed_contents.entries[key]\n",
     "\n",
-    "    print(entry.type.upper())\n",
-    "    break"
+    "    for p in entry.persons[\"author\"]:\n",
+    "        print(p)\n",
+    "    \n",
+    "    break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "3bae2b94",
    "metadata": {},
    "outputs": [],
@@ -147,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "id": "74437e15",
    "metadata": {},
    "outputs": [],
@@ -162,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "id": "88cd29e7",
    "metadata": {},
    "outputs": [],
@@ -174,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "id": "78ec264f",
    "metadata": {},
    "outputs": [],
